apps/ljwx-health/base/service-boot.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ljwx-boot
  namespace: ljwx-health
  labels:
    app: ljwx-boot
    component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9998
      targetPort: 9998
      protocol: TCP
  selector:
    app: ljwx-boot
    component: backend
